syntax = "proto3";

package sfc_team;

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Data.GetAll";

message GetAllTeamDataRequest{}