syntax = "proto3";

package sfc_team;

import "Models/Team/Data/data_value.proto";

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Data.GetAll";

message GetAllTeamDataResponse
{   
    repeated DataValue team_player_statuses = 1;    
}