syntax = "proto3";

package sfc_team;

import "Messages/Team/Data/GetAll/get_all_team_data_request.proto";
import "Messages/Team/Data/GetAll/get_all_team_data_response.proto";

option csharp_namespace = "SFC.Team.Contracts.Services";

service TeamDataService {
    rpc GetAll (GetAllTeamDataRequest) returns (GetAllTeamDataResponse);
}